fix photo docs for swagger
